# hass-pyscript-jupyter

./: .gitignore  README.md  hass_pyscript_kernel.py  pyscript.conf  pyscript_tutorial.ipynb  requirements.txt  setup.cfg  setup.py
hass_pyscript_kernel/: __init__.py  __main__.py  install.py  shim.py  version.py
hass_pyscript_kernel/kernel_files/: pyscript.conf
